# Mews

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.rs  news_scraper.rs  styles.css
src-tauri/: Cargo.toml  newsData.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  news_scraper.rs
