[package]
name = "mews"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "shell-open",
    "macos-private-api",
    "system-tray",
] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde_json = "1"
scraper = "0.19.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
rss = "2.0.7"
window-vibrancy = "0.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
